crates/elenchus-parser/tests/snapshots/errors__limit_shows_first_n_with_footer.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: diags(BROKEN).render(Some(2))
---
RESULT: 3 syntax errors

[1/3] line 1, col 6
   | FACT lonely
   |      ^^^^^^
   problem : FACT expects an atom: <Subject> <predicate> [<object>]
   syntax  : FACT <Subject> <predicate> [<object>]
   example : FACT socrates is human

[2/3] line 3, col 5
   | NOT also_lonely
   |     ^^^^^^^^^^^
   problem : NOT expects an atom: <Subject> <predicate> [<object>]
   syntax  : NOT <Subject> <predicate> [<object>]
   example : NOT socrates is immortal

(showing 2 of 3 — pass --max-errors 0 for all)
